Migrate cds-access-api to JUnit5
Perform all-round modernization.

Change-Id: I23fda7be84e40a17d711265a5b23030453ef3fa8
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>