@@ -7,11 +7,10 @@
  */
 package org.opendaylight.controller.cluster.access.commands;
 
-import static org.junit.Assert.assertArrayEquals;
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import com.google.common.base.MoreObjects;
-import com.google.common.collect.ImmutableList;
 import java.util.List;
 import java.util.Optional;
 import org.apache.pekko.actor.ActorRef;
@@ -20,59 +19,56 @@ import org.apache.pekko.actor.ActorSystem;
 import org.apache.pekko.actor.ExtendedActorSystem;
 import org.apache.pekko.serialization.JavaSerializer;
 import org.apache.pekko.testkit.TestProbe;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.opendaylight.controller.cluster.access.ABIVersion;
 import org.opendaylight.yangtools.yang.data.tree.api.DataTree;
 import org.opendaylight.yangtools.yang.data.tree.api.DataTreeConfiguration;
-import org.opendaylight.yangtools.yang.data.tree.api.ReadOnlyDataTree;
 import org.opendaylight.yangtools.yang.data.tree.impl.di.InMemoryDataTreeFactory;
 
-public class ConnectClientSuccessTest extends AbstractRequestSuccessTest<ConnectClientSuccess> {
+class ConnectClientSuccessTest extends AbstractRequestSuccessTest<ConnectClientSuccess> {
     private static final DataTree TREE = new InMemoryDataTreeFactory().create(
         DataTreeConfiguration.DEFAULT_OPERATIONAL);
     private static final ActorSystem SYSTEM = ActorSystem.create("test");
     private static final ActorRef ACTOR_REF = TestProbe.apply(SYSTEM).ref();
     private static final ActorSelection ACTOR_SELECTION =  ActorSelection.apply(ACTOR_REF, "foo");
-    private static final List<ActorSelection> ALTERNATES = ImmutableList.of(ACTOR_SELECTION);
+    private static final List<ActorSelection> ALTERNATES = List.of(ACTOR_SELECTION);
     private static final int MAX_MESSAGES = 10;
     private static final ConnectClientSuccess OBJECT = new ConnectClientSuccess(CLIENT_IDENTIFIER, 0, ACTOR_REF,
         ALTERNATES, TREE, MAX_MESSAGES);
 
-    public ConnectClientSuccessTest() {
+    ConnectClientSuccessTest() {
         super(OBJECT, 147 + ACTOR_REF.path().toSerializationFormat().length());
     }
 
-    @Before
-    public void setUp() {
+    @BeforeEach
+    void beforeEach() {
         JavaSerializer.currentSystem().value_$eq((ExtendedActorSystem) SYSTEM);
     }
 
     @Test
-    public void testGetAlternates() {
+    void testGetAlternates() {
         final var alternates = OBJECT.getAlternates();
         assertArrayEquals(ALTERNATES.toArray(), alternates.toArray());
     }
 
     @Test
-    public void testGetBackend() {
-        final ActorRef actorRef = OBJECT.getBackend();
-        assertEquals(ACTOR_REF, actorRef);
+    void testGetBackend() {
+        assertEquals(ACTOR_REF, OBJECT.getBackend());
     }
 
     @Test
-    public void testGetDataTree() {
-        final ReadOnlyDataTree tree = OBJECT.getDataTree().orElseThrow();
-        assertEquals(TREE, tree);
+    void testGetDataTree() {
+        assertEquals(Optional.of(TREE), OBJECT.getDataTree());
     }
 
     @Test
-    public void testGetMaxMessages() {
+    void testGetMaxMessages() {
         assertEquals(MAX_MESSAGES, OBJECT.getMaxMessages());
     }
 
     @Test
-    public void cloneAsVersionTest() {
+    void cloneAsVersionTest() {
         final var clone = OBJECT.cloneAsVersion(ABIVersion.TEST_FUTURE_VERSION);
         assertEquals(OBJECT.getSequence(), clone.getSequence());
         assertEquals(OBJECT.getTarget(), clone.getTarget());
@@ -83,13 +79,13 @@ public class ConnectClientSuccessTest extends AbstractRequestSuccessTest<Connect
     }
 
     @Test
-    public void addToStringAttributes() {
+    void addToStringAttributes() {
         // Just verify it doesn't throw an exception.
         OBJECT.addToStringAttributes(MoreObjects.toStringHelper(OBJECT));
     }
 
     @Override
-    protected void doAdditionalAssertions(final ConnectClientSuccess deserialize) {
+    void doAdditionalAssertions(final ConnectClientSuccess deserialize) {
         assertEquals(OBJECT.getAlternates().size(), deserialize.getAlternates().size());
         assertEquals(OBJECT.getBackend(), deserialize.getBackend());
         assertEquals(Optional.empty(), deserialize.getDataTree());
